[package]
name = "exhaust"
version = "0.1.2"
authors = ["heyrict <xiezh0831@yahoo.co.jp>"]
edition = "2018"

[dependencies]
unicode-width = "0.1.5"
crossterm = "0.13"
bitflags = "^1.2"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[dependencies.tui]
git = "https://github.com/heyrict/tui-rs"
branch = "merge-crossterm-refactor"
default-features = false
features = ["crossterm"]

[profile.release]
codegen-units = 1
lto = true
