[package]
name = "exhaust"
version = "0.2.3"
authors = ["heyrict <xiezh0831@yahoo.co.jp>"]
edition = "2018"

[dependencies]
unicode-width = "0.1.5"
crossterm = "0.16"
bitflags = "^1.2"
libflate = "^0.1"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[dependencies.tui]
version = "0.8"
default-features = false
features = ["crossterm"]

[profile.release]
codegen-units = 1
lto = true
